# ipc-counter

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h  types.h  version.h
include/core/: application.h  cli_parser.h
include/ipc/: ipc_channel.h  ipc_factory.h  pipe_channel.h  shm_channel.h  unix_socket_channel.h
src/: main.cpp
src/core/: application.cpp  cli_parser.cpp
src/ipc/: ipc_factory.cpp  pipe_channel.cpp  shm_channel.cpp  unix_socket_channel.cpp
